マルコフ追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": true,
+    "python.pythonPath": "/Users/niya/.local/share/virtualenvs/mikoto_bot-p1fqTSJR/bin/python"
 }
